# kwin-hybris

./: .gitlab-ci.yml  CMakeLists.txt  plasma-kwin_wayland.service.in
autotests/: test_xcb_window.cpp
autotests/integration/: CMakeLists.txt  pointer_input.cpp  quick_tiling_test.cpp  transient_placement.cpp  xdgshellclient_test.cpp
autotests/integration/effects/: slidingpopups_test.cpp  wobbly_shade_test.cpp
src/: CMakeLists.txt  abstract_client.cpp  abstract_client.h  abstract_output.cpp  abstract_output.h  atoms.h  colordevice.cpp  colors.cpp  colors.h  composite.cpp  composite.h  config-kwin.h.cmake  cursor.cpp  cursor.h  cursorview_opengl.cpp  effects.cpp  effects.h  events.cpp  input.cpp  input.h  item.cpp  main.cpp  main.h  main_wayland.cpp  netinfo.cpp  platform.cpp  pointer_input.cpp  renderbackend.h  renderlayer.cpp  renderlayer.h  scene.cpp  scene.h  touch_input.cpp  workspace.cpp  workspace.h  x11client.cpp  x11utils.cpp  x11utils.h  xdgshellclient.cpp  xdgshellclient.h  (+1 more)
src/backends/: CMakeLists.txt
src/backends/drm/: drm_output.cpp  drm_output.h  drm_pipeline.cpp  drm_pipeline.h  drm_pipeline_legacy.cpp  drm_virtual_output.cpp  drm_virtual_output.h  egl_gbm_backend.cpp  egl_gbm_backend.h  egl_gbm_layer.cpp  egl_gbm_layer.h  egl_multi_backend.cpp  egl_multi_backend.h  shadowbuffer.h  (+1 more)
src/effects/: CMakeLists.txt
src/effects/grid/: CMakeLists.txt  gridconfig.kcfg  gridconfig.kcfgc  grideffect.cpp  grideffect.h  main.cpp  metadata.json
src/effects/grid/kcm/: CMakeLists.txt  grideffectkcm.cpp  grideffectkcm.desktop  grideffectkcm.h  grideffectkcm.ui
src/effects/grid/qml/: main.qml
src/libkwineffects/: kwineffects.h
src/scripting/: scripting.cpp
src/scripts/: CMakeLists.txt
src/scripts/minimizeall/plugin/: CMakeLists.txt  minimizealldbusservice.cpp  minimizealldbusservice.h  org.kde.KWin.Script.MinimizeAll1.xml  plugin.cpp  plugin.h  qmldir
src/tabbox/: tabbox.cpp  tabbox.h
src/utils/: xcbutils.cpp  xcbutils.h
src/xwl/: xwayland.cpp  xwayland.h
(+33 files in other folders)
